- deleted TestConfig, moved test configuration to AppConfig.